# agent

Financial-MCP-Agent/: .env
Financial-MCP-Agent/logs/20250906_205254_f8db3b41/: execution_info.json
Financial-MCP-Agent/logs/20250906_205254_f8db3b41/agents/: fundamental_agent_execution.json  main_execution.json  news_agent_execution.json  summary_agent_execution.json  technical_agent_execution.json  value_agent_execution.json
Financial-MCP-Agent/logs/20250906_205327_873d1236/: EXECUTION_SUMMARY.md  execution_info.json
Financial-MCP-Agent/logs/20250906_205327_873d1236/agents/: fundamental_agent_execution.json  main_execution.json  news_agent_execution.json  (+3 more)
Financial-MCP-Agent/logs/20250906_205737_0363dc35/: execution_info.json
Financial-MCP-Agent/logs/20250906_212148_6836298c/: EXECUTION_SUMMARY.md  execution_info.json
Financial-MCP-Agent/logs/20250906_213402_cb997530/: execution_info.json
Financial-MCP-Agent/logs/20250906_213547_aec1f979/: execution_info.json
Financial-MCP-Agent/logs/20250906_213646_ff091761/: EXECUTION_SUMMARY.md  execution_info.json
Financial-MCP-Agent/logs/20250906_220142_0bc5eafc/: execution_info.json
Financial-MCP-Agent/logs/20250906_220555_8b32064b/: execution_info.json
Financial-MCP-Agent/logs/20250907_152912_64af249f/: execution_info.json
Financial-MCP-Agent/logs/20250907_153057_8d01d5c4/: execution_info.json
Financial-MCP-Agent/logs/20250915_163426_72e67daf/: EXECUTION_SUMMARY.md  execution_info.json
Financial-MCP-Agent/reports/: report_一下百度_20250915_164405.md  report_嘉友国际_20250906_205935.md
Financial-MCP-Agent/src/agents/: fundamental_agent.py
Financial-MCP-Agent/src/tools/: mcp_config.py
a-share-mcp-is-just-i-need/: pyproject.toml
a-share-mcp-is-just-i-need/src/: data_source_interface.py
a-share-mcp-is-just-i-need/src/tools/: stock_market.py
(+68 files in other folders)
