[project]
name = "a-share-mcp"
version = "0.1.0"
description = "A股MCP服务器 - 提供中国A股市场数据分析工具"
authors = [
    {name = "Financial Agent", email = "agent@example.com"}
]
# readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "baostock>=0.8.9",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "python-dateutil>=2.8.0",
    "pytz>=2021.1",
    "tabulate>=0.9.0",
    "rich>=10.0.0",
    "typer>=0.4.0",
    "colorama>=0.4.4",
    "click>=8.0.0",
    "shellingham>=1.4.0",
    "markdown-it-py>=2.0.0",
    "mdurl>=0.1.0",
    "pygments>=2.10.0",
    "peft>=0.17.0",
    "transformers>=4.51.3",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.0",
    "pydantic-core>=2.33.0",
    "pydantic-settings>=2.10.0",
    "typing-extensions>=4.12.0",
    "typing-inspection>=0.4.0",
    "annotated-types>=0.6.0",
    "anyio>=4.5.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "sse-starlette>=1.6.0",
    "starlette>=0.27.0",
    "uvicorn>=0.31.0",
    "certifi>=2021.10.8",
    "h11>=0.16.0",
    "httpcore>=1.0.0",
    "idna>=2.8.0",
    "sniffio>=1.1.0",
    "six>=1.16.0",
    "tzdata>=2021.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "flake8>=3.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
